fix: reduce extraneous spacing in accordion

--- a/client/src/styles/theme.css
+++ b/client/src/styles/theme.css
@@ -148,7 +148,7 @@ body {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: var(--space-2) 0;
+  padding: var(--space-1) 0;
   font-family: var(--default-font-family);
   font-size: 14px;
   font-weight: 500;
@@ -184,7 +184,7 @@ body {
 }
 
 .accordion-content-inner {
-  padding-bottom: var(--space-3);
+  padding-bottom: var(--space-2);
 }
 
 @keyframes slideDown {
